# AIagent

./: .env.example  .gitignore  .mcp.json  pyproject.toml  start-backend.ps1
.claude/: settings.local.json
app/: __init__.py  main.py
app/agents/: __init__.py  agent.py  tools.py
app/agents/rag/: __init__.py  graph.py  nodes.py  prompts.py  state.py
app/api/: agent.py  auth.py  chat.py  health.py  ingest.py
app/api/auth/: __init__.py  routes.py
app/constants/: error_codes.py  intent_types.py
app/core/: config.py  llm.py  security.py
app/db/: database.py  session.py  user_repo.py
app/db/repositories/: user_repo.py
app/middlewares/: auth_middleware.py  logging_middleware.py
app/models/: chat_session.py  user.py
app/rag/: embeddings.py  hybrid_retriever.py  loader.py  reranker.py  retriever.py  splitter.py  vectorstore.py
app/services/: auth_service.py  chat_service.py
app/tests/: conftest.py
app/tests/test_agents/: test_rag_graph.py
app/utils/: llm_utils.py  text_utils.py
docs/: ARCHITECTURE.md  JWT_AUTH.md  MIGRATION.md  REFACTOR_REPORT.md  STRUCTURE.md
eval/: dataset.jsonl  runner.py
frontend/: package.json  pnpm-lock.yaml
frontend/src/: App.tsx
frontend/src/api/: auth.ts  client.ts  index.ts
frontend/src/components/: ChatInput.tsx  ChatMessage.tsx  LoginForm.tsx  RegisterForm.tsx  index.ts
scripts/: create_user_tables.py  probe_ingest.py  test_rag_graph.py
test-docs/: agent-stack.md  rag-fundamentals.md  rag-intro.md  vector-db-comparison.md
tests/: test_chat.py  test_health.py  test_ingest.py  test_splitter.py
(+9 files in other folders)
