[project]
name = "aiagent"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "langchain>=1.3.4",
    "langchain-community>=0.3.0",
    "langchain-openai>=1.2.2",
    "pydantic-settings>=2.14.1",
    "pypdf>=6.12.2",
    "python-multipart>=0.0.31",
    "qdrant-client>=1.18.0",
    "uvicorn[standard]>=0.48.0",
    "unstructured[docx]>=0.16.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
]
